// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. front lead one - medium - portrait 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "paddingBottom": 56,
      "paddingTop": 20,
    }
  }
>
  <Text>
    lead
  </Text>
</View>
`;

exports[`2. front lead one - wide - portrait 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "paddingBottom": 56,
      "paddingTop": 20,
    }
  }
>
  <Text>
    lead
  </Text>
</View>
`;

exports[`3. front lead one - huge - portrait 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "paddingBottom": 56,
      "paddingTop": 20,
    }
  }
>
  <Text>
    lead
  </Text>
</View>
`;

exports[`4. front lead one - medium - landscape 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "paddingBottom": 56,
      "paddingTop": 20,
      "width": 1000,
    }
  }
>
  <Text>
    lead
  </Text>
</View>
`;

exports[`5. front lead one - wide - landscape 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "paddingBottom": 56,
      "paddingTop": 20,
      "width": 1000,
    }
  }
>
  <Text>
    lead
  </Text>
</View>
`;

exports[`6. front lead one - huge - landscape 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 30,
      "paddingBottom": 56,
      "paddingTop": 20,
    }
  }
>
  <Text>
    lead
  </Text>
</View>
`;
